[package]
name = "login-utils"
version = "0.3.1"
authors = ["Pablo Deymonnaz <deymonnaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = ">=0.11, <=0.12", features = ["derive"] }
actix-web = { version="3.3.2", features=["rust-tls"] }
actix-web-validator = "2.0.3"
