[package]
name = "login-utils"
version = "0.5.0"
authors = ["Pablo Deymonnaz <deymonnaz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
actix-web = "4"
actix-web-validator = "5"
